# spintable

./: .gitignore  CMakeLists.txt  README.md  adc.py  cosmostest.cpp  imudriver.c  motor.py  motorpi.cpp  readEncoder.py  sensorpi.cpp  server.cpp
camera/: ASICamera2.h  camera.cpp  camera.h  camera2.cpp  cameraDump.cpp
config/data/: crc.txt
config/system/: system.txt
config/targets/MOTOR/: cmd_tlm_server.txt  target.txt
config/targets/MOTOR/cmd_tlm/: motor_cmd.txt  motor_tlm.txt
config/targets/MOTOR/lib/: motor_position.rb  motor_rev_cnt.rb  motor_speed.rb  systime.rb
config/targets/SENSOR/: cmd_tlm_server.txt  target.txt
config/targets/SENSOR/cmd_tlm/: sensor_cmd.txt  sensor_tlm.txt
config/targets/SENSOR/lib/: round_to.rb
config/targets/SYSTEM/screens/: overview.txt
config/tools/tlm_extractor/: mag  magnetometers
config/tools/tlm_grapher/: motor.txt  sensors.txt
config/tools/tlm_viewer/: tlm_viewer.txt
cosmos/: cosmos.cpp  cosmos.h  cosmosQueue.cpp  cosmosQueue.h  cosmos_queue.h  packets.cpp  packets.h
encoder/: decoder.cpp  decoder.h
fvm400/: a.out  fvm400.cpp  fvm400.h  main.cpp
gps/: check_gps.sh  configure_gps.sh  gps-test.py  gps.cpp  gps.h  gpsClient  gpsTest  gpsTest.cpp  gpsd.cpp  gpstest.cpp
imu/: a.out  imu.cpp  imu.h  imuClient  imudriver.c
motor/: CMakeLists.txt  dcmotor.cpp  dcmotor.h  decoder.cpp  motorTest.cpp  pid.cpp  pid.h  pwm.cpp  pwm.h  server.cpp
motor/encoder/: decoder.cpp
motor/motor/: a.out  dcmotor.cpp  dcmotor.h  motorTest.cpp
sensor/: CMakeLists.txt  server.cpp
sensor/camera/: camera.cpp  camera.h
sensor/gps/: configure_gps.sh  gps.h
sensor/imu/: a.out  imudriver.c.old
sensor/tam/: a.out  main.cpp  tam.cpp  tam.h
src/: motorpi.cpp  sensorpi.cpp
src/camera/: camera.cpp  camera.h  camera2.h  cameraDump.cpp
src/cosmos/: cosmos.h  cosmosQueue.cpp  cosmosQueue.h  packets.cpp  packets.h
src/gps/: gps.cpp  gps.h
src/imu/: imu.cpp  imu.h  imudriver.c
src/motor/: dcmotor.cpp  dcmotor.h  decoder.cpp  decoder.h  motorTest.cpp  pid.cpp  pid.h  pwm.cpp
src/tam/: a.out  ads1115.cpp  main.cpp  tam.cpp  tam.h
tam/: I2Cdev.h  ads1115.cpp  ads1115.h  main.cpp  tam.cpp  tam.h
